--- a/css/perfil.css
+++ b/css/perfil.css
@@ -42,20 +42,20 @@ body {
 /* Menú lateral del perfil */
 .menu-perfil {
     width: 280px;
-    height: 100vh;
+    height: 80vh;
     background: linear-gradient(135deg, #6a0dad, #9b30ff);
     color: white;
-    display: flex;
-    flex-direction: column;
+ /*   display: flex;
+   // flex-direction: column;   */
     align-items: center;
     padding-top: 70px;
     padding-left: 20px;
     padding-right: 20px;
-    position: fixed;
+    position: fixed;  
     right: -280px; /* Cambiado para que inicie fuera de la pantalla */
     top: 10px;
     transition: right 0.3s ease-in-out; /* Cambiado de left a right */
-    box-shadow: 4px 0 10px rgba(255, 0, 255, 0.5);
+    box-shadow: -1px 0 10px rgba(255, 0, 255, 0.5);
     z-index: 100;
 }
 
@@ -155,8 +155,8 @@ body {
 }
 
 /* Imagen de usuario */
-img {
-    position: absolute;
+.setPerfil-image {
+    position: absolute; 
     top: 0;
     bottom: 0;
     left: 0;
@@ -262,6 +262,18 @@ button {
 
 button:hover {
     background-color: #218838;
+}
+
+
+.foto-perfil {
+    width: 150px; /* Aumentar el tamaño */
+    height: 150px; /* Aumentar el tamaño */
+    margin-top: 0; /* Eliminar el margen superior */
+    position: relative;
+    border-radius: 50%; /* Hacer la imagen circular */;
+    box-shadow: 1px 4px 12px rgba(255, 0, 255, 0.6);
+    border: rgba(255, 0, 255, 0.6) solid 2px; /* Borde verde */    
+    top: -250px; /* Mover hacia arriba */
 }
 
 /* Mostrar el footer en pantallas más pequeñas */
